# sketchor

./: .gitignore  NOTICE.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/wasm/: README.md
apps/web/src/: App.tsx  main.tsx  styles.css  units.ts
apps/web/src-tauri/: Cargo.toml  installer-hooks.nsh  register-dxf.ps1  tauri.conf.json  unregister-dxf.ps1
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/shell-ext/: .gitignore
apps/web/src-tauri/src/: main.rs
apps/web/src/browser/: FileExplorerPanel.tsx  dwgImport.ts  thumbnail.ts
apps/web/src/code/: CodePanel.tsx
apps/web/src/dxf/: DxfBrowser.tsx  ImportReportBanner.tsx  desktopBridge.ts
apps/web/src/heal/: DiagnosticsPanel.tsx  DuplicatesPanel.tsx
apps/web/src/io/: drawingFile.ts  sketchorFile.ts
apps/web/src/layers/: LayerPanel.tsx
apps/web/src/state/: store.ts
apps/web/src/tabs/: TabStrip.tsx
apps/web/src/update/: autoUpdate.ts  updateNotifier.ts
apps/web/src/viewport/: StraightenPanel.tsx  Viewport.tsx  renderer.ts  snapping.ts  view.ts
native/: build-shell-extensions.ps1
native/dxf-thumbnailer/: Cargo.toml  README.md  install-thumbnailer.ps1  uninstall-thumbnailer.ps1
native/dxf-thumbnailer/examples/: render_sample.rs  verify_shell_thumb.rs
native/dxf-thumbnailer/samples/: gasket.dxf
native/dxf-thumbnailer/src/: dxf.rs  lib.rs  render.rs
native/sketchor-shell/: Cargo.toml  README.md  install.ps1  uninstall.ps1
native/sketchor-shell/examples/: render_sample.rs  verify_shell_thumb.rs
native/sketchor-shell/samples/: bracket.sketchor  flange.sketchor
native/sketchor-shell/src/: lib.rs  model.rs  preview.rs  render.rs
