[package]
name = "dxf-thumbnailer"
version = "0.1.0"
edition = "2021"
description = "Windows Explorer thumbnail provider for DXF drawings (Sketchor)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
windows-core = "0.58"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies.windows]
version = "0.58"
features = [
  "implement",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_System_SystemServices",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
]

[profile.release]
opt-level = "z"
lto = true
strip = true
