[package]
name = "sketchor-shell"
version = "0.1.0"
edition = "2021"
description = "Windows Explorer shell extensions for Sketchor (.sketchor) drawings: thumbnail (icon) provider + preview-pane handler"

[lib]
name = "sketchor_shell"
crate-type = ["cdylib", "rlib"]

[dependencies]
windows-core = "0.58"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies.windows]
version = "0.58"
features = [
  "implement",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
  "Win32_System_Registry",
  "Win32_System_SystemServices",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "z"
lto = true
strip = true
