[package]
name = "sketchor"
version = "0.5.0"
description = "Sketchor - modern parametric 2D sketching"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
# Opens the GitHub release download page when the update notifier prompts.
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
